customization and tests

--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Europe/Warsaw
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Catpersec OnePager # the main title
+title: Cyberlog.me # the main title
 
-tagline: Hello wonderful world! # it will display as the subtitle
+tagline: Hello world! # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   Great to see you 🤩
@@ -88,8 +88,7 @@ pageviews:
 #     light — Use the light color scheme
 #     dark — Use the dark color scheme
 #
-theme_mode: dark
-# [light | dark]
+theme_mode: #[light | dark]
 
 # The CDN endpoint for media resources.
 # Notice that once it is assigned, the CDN url
@@ -99,7 +98,7 @@ theme_mode: dark
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /assets/img/avatar.jpg
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
